--- a/src/index.css
+++ b/src/index.css
@@ -127,3 +127,35 @@ li span.active::before {
 .order p {
   margin: 20px auto;
 }
+
+/* Modal Backdrop */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+
+.backdrop > .modal {
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 40px 20px;
+  background-color: #fff;
+  border-radius: 10px;
+  text-align: center;
+}
+
+.backdrop > .modal button {
+  color: #444;
+  border-color: #444;
+  font-weight: bold !;
+  margin-top: 20px;
+}
+
+.backdrop > .modal > p {
+  color: #444;
+  font-weight: bold !;
+}
