Add a animated loader component

--- a/src/index.css
+++ b/src/index.css
@@ -159,3 +159,13 @@ li span.active::before {
   color: #444;
   font-weight: bold !;
 }
+
+/* Loader Styles */
+.loader {
+  width: 10px;
+  height: 10px;
+  margin: 40px auto;
+  border-radius: 50%;
+  background: #fff;
+  box-shadow: 0 0 6px rgba(255, 255, 255, 0.5);
+}
